--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 *UserInterfaceState.xcuserstate
+TUROTUNA.xcodeproj/project.xcworkspace/xcuserdata/mobile13.xcuserdatad/UserInterfaceState.xcuserstate
