--- a/TUROTUNA/AnimPlayerList.plist
+++ b/TUROTUNA/AnimPlayerList.plist
@@ -2,21 +2,23 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>frames</key>
+	<key>walk</key>
 	<dict>
-		<key>walk1.png</key>
-		<dict>
-			<key>frame</key>
-			<string></string>
-			<key>offset</key>
-			<string></string>
-			<key>sourceColorRect</key>
-			<string></string>
-			<key>sourceSize</key>
-			<string></string>
-		</dict>
+		<key>file</key>
+		<string></string>
+		<key>rectList</key>
+		<array>
+			<dict>
+				<key>x</key>
+				<integer>0</integer>
+				<key>y</key>
+				<integer>0</integer>
+				<key>width</key>
+				<integer>0</integer>
+				<key>height</key>
+				<integer>0</integer>
+			</dict>
+		</array>
 	</dict>
-	<key>metadata</key>
-	<dict/>
 </dict>
 </plist>
