--- a/TUROTUNA/enemyPath1.plist
+++ b/TUROTUNA/enemyPath1.plist
@@ -8,36 +8,44 @@
 			<array>
 				<integer>100</integer>
 				<integer>100</integer>
+				<integer>180</integer>
 			</array>
 			<array>
 				<integer>100</integer>
 				<integer>400</integer>
+				<integer>270</integer>
 			</array>
 			<array>
 				<integer>400</integer>
 				<integer>400</integer>
+				<integer>0</integer>
 			</array>
 			<array>
 				<integer>400</integer>
 				<integer>100</integer>
+				<integer>90</integer>
 			</array>
 		</array>
 		<array>
 			<array>
 				<integer>700</integer>
 				<integer>500</integer>
+				<integer>90</integer>
 			</array>
 			<array>
 				<integer>500</integer>
 				<integer>500</integer>
+				<integer>180</integer>
 			</array>
 			<array>
 				<integer>500</integer>
 				<integer>700</integer>
+				<integer>270</integer>
 			</array>
 			<array>
 				<integer>700</integer>
 				<integer>700</integer>
+				<integer>0</integer>
 			</array>
 		</array>
 	</array>
