nouvel ennemi trolololilo

--- a/TUROTUNA/enemyPath1.plist
+++ b/TUROTUNA/enemyPath1.plist
@@ -6,6 +6,18 @@
 	<array>
 		<array>
 			<array>
+				<integer>950</integer>
+				<integer>10</integer>
+				<integer>90</integer>
+			</array>
+			<array>
+				<integer>950</integer>
+				<integer>700</integer>
+				<integer>180</integer>
+			</array>
+		</array>
+		<array>
+			<array>
 				<integer>100</integer>
 				<integer>700</integer>
 				<integer>180</integer>
